# ci

./: .codespellrc  .cz.yaml  .pre-commit-config.yaml  .yamllint.yml  README.md  requirements-dev.txt
.github/workflows/: Clang-5-8.yml  Clang.yml  GCC.yml  Intel.yml  publish-archlinux.yml  publish-ubuntu-root.yml  publish-ubuntu.yml  remove-packages  remove-packages.yml  suppress-packages.yml  test-ubuntu.yml
Archlinux/: Dockerfile
Archlinux/compilers/cloog/: PKGBUILD
Archlinux/compilers/gcc10/: PKGBUILD  c89  c99
Archlinux/compilers/gcc43/: PKGBUILD
Archlinux/compilers/gcc44/: PKGBUILD
Archlinux/compilers/gcc45/: PKGBUILD
Archlinux/compilers/gcc46/: PKGBUILD
Archlinux/compilers/gcc47/: PKGBUILD
Archlinux/compilers/gcc48/: PKGBUILD
Archlinux/compilers/gcc49/: PKGBUILD
Archlinux/compilers/gcc5/: PKGBUILD
Archlinux/compilers/gcc6/: PKGBUILD
Archlinux/compilers/gcc7/: PKGBUILD
Archlinux/compilers/gcc8/: PKGBUILD  c89  c99
Archlinux/compilers/gcc9/: PKGBUILD  c89  c99
Archlinux/compilers/osl/: PKGBUILD
Archlinux/tests/: CMakeLists.txt  main.cpp  sum.cpp  sum.hpp
Ubuntu/: Clang  Clang-5-8  Dockerfile  GCC  Intel
Ubuntu/tests/: CMakeLists.txt
tests/: CMakeLists.txt
