cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(Tests LANGUAGES C CXX)

if("$ENV{RUN_COMPILER_CHECK}" STREQUAL "ON")

if(NOT "$ENV{C_COMPILER_ID}" STREQUAL ${CMAKE_C_COMPILER_ID})
  message(FATAL_ERROR "C_COMPILER_ID=$ENV{C_COMPILER_ID} mismatch CMAKE_C_COMPILER_ID=${CMAKE_C_COMPILER_ID} !")
else()
  message(STATUS "C_COMPILER_ID=$ENV{C_COMPILER_ID} CMAKE_C_COMPILER_ID=${CMAKE_C_COMPILER_ID} PASSED !")
endif()

if(NOT "$ENV{C_COMPILER_VERSION}" STREQUAL ${CMAKE_C_COMPILER_VERSION})
  message(FATAL_ERROR "C_COMPILER_VERSION=$ENV{C_COMPILER_VERSION} mismatch CMAKE_C_COMPILER_VERSION=${CMAKE_C_COMPILER_VERSION} !")
else()
  message(STATUS "C_COMPILER_VERSION=$ENV{C_COMPILER_VERSION} CMAKE_C_COMPILER_VERSION=${CMAKE_C_COMPILER_VERSION} PASSED !")
endif()

if(NOT "$ENV{CXX_COMPILER_ID}" STREQUAL ${CMAKE_CXX_COMPILER_ID})
  message(FATAL_ERROR "CXX_COMPILER_ID=$ENV{CXX_COMPILER_ID} mismatch CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID} !")
else()
  message(STATUS "CXX_COMPILER_ID=$ENV{CXX_COMPILER_ID} CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID} PASSED !")
endif()

if(NOT "$ENV{CXX_COMPILER_VERSION}" STREQUAL ${CMAKE_CXX_COMPILER_VERSION})
  message(FATAL_ERROR "CXX_COMPILER_VERSION=$ENV{CXX_COMPILER_VERSION} mismatch CMAKE_CXX_COMPILER_VERSION=${CMAKE_CXX_COMPILER_VERSION} !")
else()
  message(STATUS "CXX_COMPILER_VERSION=$ENV{CXX_COMPILER_VERSION} CMAKE_CXX_COMPILER_VERSION=${CMAKE_CXX_COMPILER_VERSION} PASSED !")
endif()

endif()

add_executable(test main.cpp)
